--- a/settings/v2/packages/project.json
+++ b/settings/v2/packages/project.json
@@ -1,3 +1,20 @@
 {
-  "__version__": "1.0.6"
+  "__version__": "1.0.6",
+  "physics": {
+    "collisionGroups": [
+      {
+        "index": 1,
+        "name": "boy"
+      },
+      {
+        "index": 2,
+        "name": "bullet"
+      }
+    ],
+    "collisionMatrix": {
+      "0": 0,
+      "1": 4,
+      "2": 2
+    }
+  }
 }
